fixed spacing and scrolling

--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,7 @@
 
   html{
       font-size: 62.5%;
+      scroll-behavior: smooth;
   }
 
 
@@ -187,7 +188,7 @@
       display: flex;
       flex-direction: column;
       margin: 20px 50px;
-      padding-bottom: 40px;
+      padding-bottom: 210px;
   }
 
 
